// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ProjectManage/ProjectList should be get data from the request to render the table 1`] = `
<div>
  <article
    class="project-manage-page-namespace"
  >
    <div
      class="ant-page-header"
    >
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="projectManage.pageTitle"
          >
            projectManage.pageTitle
          </span>
        </div>
      </div>
      <div
        class="ant-page-header-content"
      >
        projectManage.pageDescribe
      </div>
    </div>
    <section
      class="padding-content"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  projectManage.projectList.title
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn"
                    data-testid="refresh-project"
                    type="button"
                  >
                    <span
                      aria-label="sync"
                      class="anticon anticon-sync anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="sync"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  projectManage.projectList.createProject
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div>
                <div
                  class="ant-spin ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <div
                  class="ant-table ant-table-empty"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: fixed;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 190px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.name
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="projectManage.projectList.column.desc"
                            >
                              projectManage.projectList.column.desc
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.status
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="projectManage.projectList.column.createTime"
                            >
                              projectManage.projectList.column.createTime
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="projectManage.projectList.column.createUser"
                            >
                              projectManage.projectList.column.createUser
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              common.operate
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="6"
                            >
                              <div
                                class="ant-empty ant-empty-normal"
                              >
                                <div
                                  class="ant-empty-image"
                                >
                                  <svg
                                    class="ant-empty-img-simple"
                                    height="41"
                                    viewBox="0 0 64 41"
                                    width="64"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      transform="translate(0 1)"
                                    >
                                      <ellipse
                                        class="ant-empty-img-simple-ellipse"
                                        cx="32"
                                        cy="33"
                                        rx="32"
                                        ry="7"
                                      />
                                      <g
                                        class="ant-empty-img-simple-g"
                                        fill-rule="nonzero"
                                      >
                                        <path
                                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                        />
                                        <path
                                          class="ant-empty-img-simple-path"
                                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                        />
                                      </g>
                                    </g>
                                  </svg>
                                </div>
                                <div
                                  class="ant-empty-description"
                                >
                                  No Data
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </article>
</div>
`;

exports[`test ProjectManage/ProjectList should be get data from the request to render the table 2`] = `
<div>
  <article
    class="project-manage-page-namespace"
  >
    <div
      class="ant-page-header"
    >
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="projectManage.pageTitle"
          >
            projectManage.pageTitle
          </span>
        </div>
      </div>
      <div
        class="ant-page-header-content"
      >
        projectManage.pageDescribe
      </div>
    </div>
    <section
      class="padding-content"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  projectManage.projectList.title
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn"
                    data-testid="refresh-project"
                    type="button"
                  >
                    <span
                      aria-label="sync"
                      class="anticon anticon-sync"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="sync"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  projectManage.projectList.createProject
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: fixed;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 190px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.name
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="projectManage.projectList.column.desc"
                            >
                              projectManage.projectList.column.desc
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.status
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="projectManage.projectList.column.createTime"
                            >
                              projectManage.projectList.column.createTime
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="projectManage.projectList.column.createUser"
                            >
                              projectManage.projectList.column.createUser
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              common.operate
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project1"
                              >
                                project1
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.unavailable
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography ant-typography-disabled pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.unarchive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project2"
                              >
                                project2
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project3"
                              >
                                project3
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project4"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project4"
                              >
                                project4
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project5"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project5"
                              >
                                project5
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project6"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project6"
                              >
                                project6
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project7"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project7"
                              >
                                project7
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project8"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project8"
                              >
                                project8
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project9"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project9"
                              >
                                project9
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project10"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/project/project10"
                              >
                                project10
                              </a>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="desc1"
                            >
                              desc1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              projectManage.projectList.column.available
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="2022-11-01 00:00:00"
                            >
                              2022-11-01 00:00:00
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-ellipsis"
                              title="admin"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    common.edit
                                  </a>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-typography ant-typography-danger pointer"
                                  >
                                    common.delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <div
                                    class="ant-divider ant-divider-vertical"
                                    role="separator"
                                  />
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <a
                                    class="ant-typography pointer"
                                  >
                                    projectManage.projectList.column.archive
                                  </a>
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-table-pagination ant-table-pagination-right"
                  unselectable="unselectable"
                >
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-2"
                    tabindex="0"
                    title="2"
                  >
                    <a
                      rel="nofollow"
                    >
                      2
                    </a>
                  </li>
                  <li
                    aria-disabled="false"
                    class="ant-pagination-next"
                    tabindex="0"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-options"
                  >
                    <div
                      class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="10 / page"
                        >
                          10 / page
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </article>
</div>
`;
